logs/eureeka.log
Listing '.'...
Listing './bin'...
Compiling './bin/eureekad.py'...
***   File "./bin/eureekad.py", line 61
    print 'eureekad.py [-h | --help]   [-c | --config alternative config file]'
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ext.py'...
***   File "./bin/ext.py", line 34
    return `h`+'h:'+`m`+'m:'+`s`+'s'
           ^
SyntaxError: invalid syntax

Compiling './bin/kbm.py'...
***   File "./bin/kbm.py", line 63
    print 'dbm.py [-h | --help]   [-c | --config alternative config file]'
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/pdf2txt.py'...
***   File "./bin/pdf2txt.py", line 30
    print '*** PDF to text converter ***'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/que.py'...
***   File "./bin/que.py", line 62
    print 'que.py [-h | --help]   [-c | --config alternative config file]'
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/txt2xml.py'...
***   File "./bin/txt2xml.py", line 26
    print 'txt2xml.py [-h | --help]           [-m | --map filename2title]'
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/eureeka'...
Compiling './lib/python3.5/site-packages/eureeka/extraction.py'...
***   File "./lib/python3.5/site-packages/eureeka/extraction.py", line 171
    sys.stderr.write('\nConnection refused on address: '+`address`+'\n')
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureeka/kb.py'...
***   File "./lib/python3.5/site-packages/eureeka/kb.py", line 142
    print 'Processing', `fcount`+'.', 'file out of', `len(file_list)`
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureeka/rules.py'...
***   File "./lib/python3.5/site-packages/eureeka/rules.py", line 102
    q = reduce(lambda x,y: `x`+' AND '+`y`, statements['A'], '') + \
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureeka/srvlib.py'...
***   File "./lib/python3.5/site-packages/eureeka/srvlib.py", line 59
    print '\n*** Initialising EureekaServer ***'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eureeka/storage.py'...
***   File "./lib/python3.5/site-packages/eureeka/storage.py", line 82
    self.provenance = {hashlib.sha1(`prov_tit`).hexdigest():prov_tit}
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureeka/util.py'...
***   File "./lib/python3.5/site-packages/eureeka/util.py", line 336
    words = unicode(`term`.lower()).split()
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eureeka-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
